QSM Polishing - Remove Save Contact Fields initially  - remove gree button in text tab  - Add loaders when chnging dropdown options (Text Tab)  - Font in tooltips (options page)  - Alert box when clicking save button ( Emails tab/ resutls tab)  - Spacing issues in add question screen  - Reduce height of answer  - Show couple of answers by default ( Added only one because it was perfect for demo )

--- a/css/qsm-admin-question.css
+++ b/css/qsm-admin-question.css
@@ -38,7 +38,7 @@
 }
 
 .page-header .dashicons.dashicons-trash{
-    color: #FF1D04;
+    color: #dc3232;
 }
 
 .page-header  span.page-number {
@@ -113,7 +113,7 @@
 }
 
 .question-content .dashicons.dashicons-trash{
-    color: #FF1D04;
+    color: #dc3232;
 }
 
 .question-content .dashicons.dashicons-move{
@@ -166,7 +166,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 5px;
-    padding: 20px 10px;
+    padding: 10px 10px;
     background: #FAFAFA;
 }
 
@@ -179,7 +179,11 @@
 }
 
 .answer-text-div {
-	width: 65%;
+    width: 85%;
+}
+
+.answers-single > div:nth-child(4){
+    width: 12%;
 }
 
 .qsm-row {
@@ -555,7 +559,7 @@ a.import-button.button.disable_import::before {
 
 #answers .delete-answer-button{
     text-decoration: none;
-    color: #ff0000;
+    color: #dc3232;
     vertical-align: middle;
 }
 
